darcie data initial commit

--- a/src/pages/Base.module.css
+++ b/src/pages/Base.module.css
@@ -15,3 +15,14 @@
     font-size: 16px;
     padding: 0px 1rem;
 }
+
+.Routes {
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url("https://coolbackgrounds.io/images/backgrounds/index/ranger-4df6c1b6.png");
+}
